[gd_scene load_steps=3 format=3 uid="uid://cepo4n3ehc4mn"]

[ext_resource type="StyleBox" uid="uid://b16u2t4vugn5c" path="res://Assets/StyleBoxFlat/EditTaskPopup.tres" id="1_7a3yj"]
[ext_resource type="Script" uid="uid://cfqiq08jdioy4" path="res://Scripts/UI_Items/EditTaskPopup.gd" id="2_ykp1b"]

[node name="EditTaskPopup" type="PopupPanel"]
initial_position = 1
size = Vector2i(363, 326)
visible = true
theme_override_styles/panel = ExtResource("1_7a3yj")
script = ExtResource("2_ykp1b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 353.0
offset_bottom = 316.0
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Modificando Tarea de ejemplo"
text_overrun_behavior = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nombre"

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EndDateLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Fecha de entrega"

[node name="EndDateLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
placeholder_text = "YYYY-MM-DD"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
text = "Descripcion"

[node name="DescriptionLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 10

[node name="ModifyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Modificar"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/ModifyButton" to="." method="_on_modify_button_pressed"]
